# bookvert

./: .gitignore  Cargo.toml  Kick.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/audiovert/: Cargo.toml
crates/audiovert/src/: archive.rs  cli.rs  config.rs  main.rs  meta.rs  shell.rs  tasks.rs
crates/bookvert/src/: main.rs
crates/mediavert/src/: main.rs
src/: interactive.rs  lib.rs  main.rs  state.rs  styles.rs
